[package]
name = "isuconf"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
structopt = "0.3"
chrono = "0.4"
futures = "0.3"
itertools = "0.11"
tokio = { version = "1", features = ["full"] }
openssh = { version = "0.10", default-features = false, features = ["native-mux"] }
openssh-sftp-client = { version = "0.14", features = ["openssh"] }
async-recursion = "1.0"
colored = "2"
