[package]
name = "isuconf"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
anyhow = "1.0"
structopt = "0.3"
chrono = "0.4"
futures = "0.3"
itertools = "0.13"
tokio = { version = "1", features = ["full"] }
bytes = "1.8"
openssh = "0.11"
openssh-sftp-client = { version = "0.15", features = ["openssh"] }
async-recursion = "1.1"
colored = "2"
parse-size = "1"
